finally fix bottom white gap by setting body's flex-grow as 1

--- a/src/view/components/styles/body-container.scss
+++ b/src/view/components/styles/body-container.scss
@@ -4,12 +4,12 @@
   background: linear-gradient(
     rgba(229, 221, 213, 0.9), 
     rgba(229, 221, 213, 0.9)
-  ), url(/build/view/images/background.png);
+  ), url(/chat-with-ben-site/build/view/images/background.png);
   background-size: 24em;
   background-color: $background-khaki;
-  overflow: auto;
+  overflow-y: auto;
   
-  flex-basis: 100%;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
